--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "compromise": "^14.14.4",
     "config": "^4.0.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
@@ -16,9 +17,12 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.1",
     "postcss": "^8.5.4",
-    "reload": "^2.2.0",
+    "reload": "^3.3.0",
+    "send": "^1.2.0",
+    "serve-static": "^2.2.0",
     "sheryjs": "^1.0.0-beta.0.1.8",
     "tailwindcss": "^4.1.8",
+    "url-parse": "^1.5.10",
     "vite": "^6.3.5"
   },
   "name": "domain-gen1",
